--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<link rel="stylesheet" href="style.css">
 <style>
-  body {
+/*   body {
     background-color: black;
     color: white;
-  }
+  } */
 </style>
 <h1>index.htmlに差し替える</h1>
 
